--- a/Src/RedeSocialWeb/Views/Account/Register.cshtml
+++ b/Src/RedeSocialWeb/Views/Account/Register.cshtml
@@ -18,6 +18,11 @@
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="form-group">
+            <label asp-for="SobreNome" class="sr-only">Sobre Nome</label>
+            <input type="text" asp-for="SobreNome" class="form-control" placeholder="Sobre Nome" required />
+            <span asp-validation-for="SobreNome" class="text-danger"></span>
+        </div>
+        <div class="form-group">
             <label asp-for="UserName" class="sr-only">Nome de Usuario</label>
             <input type="text" asp-for="UserName" class="form-control" placeholder="Nome de Usuario" required />
             <span asp-validation-for="UserName" class="text-danger"></span>
