feat: API account e login OK - hotfix: web consumir api

--- a/Src/RedeSocialWeb/Views/Account/Login.cshtml
+++ b/Src/RedeSocialWeb/Views/Account/Login.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Login Page";
 }
 
-@model RedeSocialWeb.ViewModel.Account.LoginViewModel
+@model RedeSocial.Web.ViewModel.Account.LoginViewModel
 
 <link rel="stylesheet" href="~/css/signin.css" />
 
