--- a/Src/RedeSocialWeb/Views/Account/Register.cshtml
+++ b/Src/RedeSocialWeb/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model RedeSocialWeb.ViewModel.Account.RegisterViewModel
+﻿@model RedeSocial.Web.ViewModel.Account.RegisterViewModel
 
 @{
     ViewData["Title"] = "Register";
