--- a/Src/RedeSocialWeb/Views/_ViewImports.cshtml
+++ b/Src/RedeSocialWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using RedeSocialWeb
-@using RedeSocialWeb.Models
+﻿@using RedeSocial.Web
+@using RedeSocial.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
