feat: layout perfil

--- a/Src/RedeSocial.Web/Views/Shared/_Layout.cshtml
+++ b/Src/RedeSocial.Web/Views/Shared/_Layout.cshtml
@@ -32,16 +32,16 @@
                                 <a class="nav-link" asp-action="Index" asp-controller="Home">Pàgina Inicial</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-action="Privacy" asp-controller="Home">Notificações</a>
+                                <a class="nav-link" asp-action="Index" asp-controller="Home">Notificações</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-action="#" asp-controller="Home">Mensagens</a>
+                                <a class="nav-link" asp-action="Index" asp-controller="Home">Mensagens</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-action="#" asp-controller="Home">Itens salvos</a>
+                                <a class="nav-link" asp-action="Index" asp-controller="Home">Itens salvos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" asp-action="#" asp-controller="Home">Perfil</a>
+                                <a class="nav-link" asp-action="Perfil" asp-controller="Home">Perfil</a>
                             </li>
                         </ul>
 
