feat: account perfil

--- a/Src/RedeSocial.Web/Views/Home/Perfil.cshtml
+++ b/Src/RedeSocial.Web/Views/Home/Perfil.cshtml
@@ -11,7 +11,8 @@
         <img align="left" class="fb-image-lg" src="http://lorempixel.com/850/280/food/" alt="Profile image example" />
         <img align="left" class="fb-image-profile thumbnail" src="https://robohash.org/@(this.User.Claims.First(x => x.Type == System.Security.Claims.ClaimTypes.NameIdentifier).Value)?size=180x180&bgset=bg1" alt="Profile image example" />
         <div class="fb-profile-text">
-            <h1>@Model.UserName</h1>
+            <h1>@Model.Nome @Model.SobreNome</h1>
+            <h6>@Model.UserName</h6>
 
             <ul class="d-flex flex-row">
                 <li class="twPc-ArrangeSizeFit mr-3">
