--- a/Src/RedeSocial.Web/Views/Account/Login.cshtml
+++ b/Src/RedeSocial.Web/Views/Account/Login.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Login Page";
 }
 
-@model RedeSocial.Web.ViewModel.Account.LoginViewModel
+@model RedeSocial.Web.Models.Account.LoginViewModel
 
 <link rel="stylesheet" href="~/css/signin.css" />
 
