--- a/Src/RedeSocial.Web/Views/Account/Register.cshtml
+++ b/Src/RedeSocial.Web/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model RedeSocial.Web.ViewModel.Account.RegisterViewModel
+﻿@model RedeSocial.Web.Models.Account.RegisterViewModel
 
 @{
     ViewData["Title"] = "Register";
