--- a/Src/RedeSocial.Web/Views/Perfil/Edit.cshtml
+++ b/Src/RedeSocial.Web/Views/Perfil/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model RedeSocial.Web.ViewModel.Perfil.PerfilEditViewModel
+﻿@model RedeSocial.Web.Models.Perfil.PerfilEditViewModel
 @{
     ViewData["Title"] = "Edit";
 }
