--- a/Src/RedeSocial.Web/Views/Home/Index.cshtml
+++ b/Src/RedeSocial.Web/Views/Home/Index.cshtml
@@ -1,11 +1,9 @@
-﻿@model RedeSocial.Web.ViewModel.Account.AccountViewModel
+﻿@model RedeSocial.Web.Models.Account.AccountViewModel
 
 @{
     ViewData["Title"] = "Página Inicial";
 }
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link rel="stylesheet" href="~/css/PgInicial.css" />
 
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
@@ -49,20 +47,20 @@
                         </ul>
                     </div>
 
-                    <div class="card-body">
+                    <form class="card-body" asp-action="Create" method="post" enctype="multipart/form-data">
                         <div class="tab-content" id="myTabContent">
                             <div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
                                 <div class="form-group">
                                     <label class="sr-only" for="message">post</label>
-                                    <textarea class="form-control" id="message" rows="3" placeholder="O que você está pensando?"></textarea>
+                                    <textarea class="form-control" name="message" rows="3" placeholder="O que você está pensando?"></textarea>
                                 </div>
                             </div>
 
                             <div class="tab-pane fade" id="images" role="tabpanel" aria-labelledby="images-tab">
                                 <div class="form-group">
                                     <div class="custom-file">
-                                        <input type="file" class="custom-file-input" id="customFile">
-                                        <label class="custom-file-label" for="customFile">Upload image</label>
+                                        <input type="file" class="custom-file-input" name="imagem">
+                                        <label class="custom-file-label" for="FotoUrl">Upload image</label>
                                     </div>
                                 </div>
                                 <div class="py-4"></div>
@@ -73,13 +71,10 @@
                                 <button type="submit" class="btn btn-primary">Compartilhar</button>
                             </div>
                             <div class="btn-group">
-                                <button id="btnGroupDrop1" type="button" class="btn btn-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                                        aria-expanded="false">
-                                    <i class="fa fa-globe"></i>
-                                </button>
+                                <i class="fa fa-globe"></i>
                             </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
 
                 <!--- MODELO DE POST-->
