--- a/Src/RedeSocial.Web/Views/Account/Register.cshtml
+++ b/Src/RedeSocial.Web/Views/Account/Register.cshtml
@@ -13,9 +13,9 @@
         <h1 class="h3 mb-3 font-weight-normal">Criar sua conta</h1>
 
         <div class="form-group">
-            <label asp-for="Name" class="sr-only">Nome</label>
-            <input type="text" asp-for="Name" class="form-control" placeholder="Nome" required />
-            <span asp-validation-for="Name" class="text-danger"></span>
+            <label asp-for="Nome" class="sr-only">Nome</label>
+            <input type="text" asp-for="Nome" class="form-control" placeholder="Nome" required />
+            <span asp-validation-for="Nome" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="SobreNome" class="sr-only">Sobre Nome</label>
@@ -33,9 +33,9 @@
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="DtBirthday" class="sr-only">Data de Nascimento</label>
-            <input type="date" asp-for="DtBirthday" class="form-control" placeholder="Data de Nascimento" required />
-            <span asp-validation-for="DtBirthday" class="text-danger"></span>
+            <label asp-for="DataNascimento" class="sr-only">Data de Nascimento</label>
+            <input type="date" asp-for="DataNascimento" class="form-control" placeholder="Data de Nascimento" required />
+            <span asp-validation-for="DataNascimento" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Password" class="sr-only">Senha</label>
