--- a/Src/RedeSocial.Web/Views/Perfil/Index.cshtml
+++ b/Src/RedeSocial.Web/Views/Perfil/Index.cshtml
@@ -37,4 +37,44 @@
         </div>
     </div>
     <hr />
+    @foreach (var item in Model.IDs_Postagens)
+    {
+        <div class="card gedf-card">
+            <div class="card-header">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="mr-2">
+                            <img class="rounded-circle" width="45" src="https://robohash.org/@(this.User.Claims.First(x => x.Type == System.Security.Claims.ClaimTypes.NameIdentifier).Value)?size=50x50&bgset=bg1" alt="">
+                        </div>
+                        <div class="ml-2">
+                            <div class="h5 m-0"></div>
+                            <div class="h7 text-muted">@Html.DisplayFor(modelItem => item.ID_Account.Nome) @Html.DisplayFor(modelItem => item.ID_Account.SobreNome)</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-body">
+                <div class="text-muted h7 mb-2"> <i class="fa fa-clock-o"></i>@Html.DisplayFor(modelItem => item.DataPostagem)</div>
+                <a class="card-link" href="#">
+                    <h5 class="card-title">Titulo do bglh</h5>
+                </a>
+
+                <p class="card-text">
+                    @Html.DisplayFor(modelItem => item.Descricao)
+                    @if (@Html.DisplayFor(modelItem => item.FotoPostUrl) != null)
+                    {
+                        <div>
+                            <img class="rounded-circle" width="200" height="200" src="@Html.DisplayFor(modelItem => item.FotoPostUrl)" alt="">
+                        </div>
+                    }
+                </p>
+            </div>
+            <div class="card-footer">
+                <a href="#" class="card-link"><i class="fa fa-gittip"></i> Curtir</a>
+                <a href="#" class="card-link"><i class="fa fa-comment"></i> Comentar</a>
+                <a href="#" class="card-link"><i class="fa fa-mail-forward"></i> Compartilhar</a>
+            </div>
+        </div>
+    }
 </div> 
