--- a/Src/RedeSocial.Web/Views/Home/Index.cshtml
+++ b/Src/RedeSocial.Web/Views/Home/Index.cshtml
@@ -78,38 +78,45 @@
                 </div>
 
                 <!--- MODELO DE POST-->
-                <div class="card gedf-card">
-                    <div class="card-header">
-                        <div class="d-flex justify-content-between align-items-center">
+                @foreach (var item in Model.IDs_Postagens)
+                {
+                    <div class="card gedf-card">
+                        <div class="card-header">
                             <div class="d-flex justify-content-between align-items-center">
-                                <div class="mr-2">
-                                    <img class="rounded-circle" width="45" src="https://picsum.photos/50/50" alt="">
-                                </div>
-                                <div class="ml-2">
-                                    <div class="h5 m-0"></div>
-                                    <div class="h7 text-muted">Nome do Candango</div>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="mr-2">
+                                        <img class="rounded-circle" width="45" src="https://robohash.org/@(this.User.Claims.First(x => x.Type == System.Security.Claims.ClaimTypes.NameIdentifier).Value)?size=50x50&bgset=bg1" alt="">
+                                    </div>
+                                    <div class="ml-2">
+                                        <div class="h5 m-0"></div>
+                                        <div class="h7 text-muted">@item.ID_Account.Nome @item.ID_Account.SobreNome</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="card-body">
-                        <div class="text-muted h7 mb-2"> <i class="fa fa-clock-o"></i>10 min ago</div>
-                        <a class="card-link" href="#">
-                            <h5 class="card-title">Titulo do bglh</h5>
-                        </a>
+                        <div class="card-body">
+                            <div class="text-muted h7 mb-2"> <i class="fa fa-clock-o"></i>@Html.DisplayFor(modelItem => item.DataPostagem)</div>
 
-                        <p class="card-text">
-                            Texto texto Texto texto Texto texto Texto texto Texto texto Texto texto
-                            Texto texto Texto texto Texto texto Texto texto Texto texto Texto texto
-                        </p>
+                            <p class="card-text">
+                                @Html.DisplayFor(modelItem => item.Descricao)
+
+                                @if (!string.IsNullOrWhiteSpace(item.FotoPostUrl))
+                                {
+                                    <div>
+                                        <img width="200" height="200" src="@Html.DisplayFor(modelItem => item.FotoPostUrl)" alt="">
+                                    </div>
+                                }
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="#" class="card-link"><i class="fa fa-gittip"></i> Curtir</a>
+                            <a href="#" class="card-link"><i class="fa fa-comment"></i> Comentar</a>
+                            <a href="#" class="card-link"><i class="fa fa-mail-forward"></i> Compartilhar</a>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <a href="#" class="card-link"><i class="fa fa-gittip"></i> Curtir</a>
-                        <a href="#" class="card-link"><i class="fa fa-comment"></i> Comentar</a>
-                        <a href="#" class="card-link"><i class="fa fa-mail-forward"></i> Compartilhar</a>
-                    </div>
-                </div>
+                    <hr />
+                }
             </div>
 
             <div class="col-md-3">
