--- a/Src/RedeSocial.Web/Views/Home/Index.cshtml
+++ b/Src/RedeSocial.Web/Views/Home/Index.cshtml
@@ -3,8 +3,7 @@
 @{
     ViewData["Title"] = "Página Inicial";
 }
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<link rel="stylesheet" href="~/css/PgInicial.css" />
+<link rel="stylesheet" href="~/css/perfil.css" />
 
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous">
@@ -12,17 +11,16 @@
         crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+
 
 <div>
     <nav class="navbar navbar-light bg-white">
         <h4>Página Inicial</h4>
-        <form class="form-inline">
+        <form class="form-inline" asp-action="Index" method="get">
             <div class="input-group">
-                <input type="text" class="form-control border border-primary" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <input type="text" name="busca" class="form-control border border-primary" aria-label="Recipient's username" aria-describedby="button-addon2">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-primary" type="button" id="button-addon2">
+                    <button class="btn btn-outline-primary" type="submit">
                         <i class="fa fa-search"></i>
                     </button>
                 </div>
@@ -85,26 +83,37 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="mr-2">
-                                        <img class="rounded-circle" width="45" src="https://robohash.org/@(this.User.Claims.First(x => x.Type == System.Security.Claims.ClaimTypes.NameIdentifier).Value)?size=50x50&bgset=bg1" alt="">
+                                        <img class="rounded-circle" width="45" src="https://robohash.org/@(item.ID_Account.ID)?size=50x50&bgset=bg1" alt="">
                                     </div>
                                     <div class="ml-2">
-                                        <div class="h5 m-0"></div>
-                                        <div class="h7 text-muted">@item.ID_Account.Nome @item.ID_Account.SobreNome</div>
+                                        <div class="h5 m-0">@item.ID_Account.Nome @item.ID_Account.SobreNome</div>
+                                        <div class="h7 text-muted">@(item.ID_Account.UserName)</div>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="dropdown">
+                                        <button class="btn btn-link dropdown-toggle" type="button" id="gedf-drop1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            <i class="fa fa-ellipsis-h"></i>
+                                        </button>
+                                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="gedf-drop1">
+                                            <a class="dropdown-item" href="#">Editar</a>
+                                            <a class="dropdown-item" href="#">Excluir</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
                         <div class="card-body">
-                            <div class="text-muted h7 mb-2"> <i class="fa fa-clock-o"></i>@Html.DisplayFor(modelItem => item.DataPostagem)</div>
+                            <div class="text-muted h7 mb-2"> <i class="fa fa-clock-o"></i>@item.DataPostagem</div>
 
                             <p class="card-text">
-                                @Html.DisplayFor(modelItem => item.Descricao)
+                                @item.Descricao
 
                                 @if (!string.IsNullOrWhiteSpace(item.FotoPostUrl))
                                 {
                                     <div>
-                                        <img width="200" height="200" src="@Html.DisplayFor(modelItem => item.FotoPostUrl)" alt="">
+                                        <img width="200" height="200" src="@item.FotoPostUrl" alt="">
                                     </div>
                                 }
                             </p>
@@ -120,18 +129,28 @@
             </div>
 
             <div class="col-md-3">
-                <div class="card gedf-card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">
-                            Some quick example text to build on the card title and make up the bulk of the
-                            card's content.
-                        </p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                @foreach (var item in Model.Accounts_Busca)
+                {
+                    <div class="card gedf-card">
+                        <div class="card-header">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="mr-2">
+                                        <img class="rounded-circle" width="45" src="https://robohash.org/@(item.ID)?size=50x50&bgset=bg1" alt="">
+                                    </div>
+                                    <div class="ml-2">
+                                        <div class="h5 m-0"></div>
+                                        <div class="h7 text-muted">@item.Nome @item.SobreNome</div>
+
+                                        <div>
+                                            <a asp-action="" class="card-link">Seguir</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                }
             </div>
         </div>
     </div>
