--- a/Src/RedeSocial.Web/Views/Perfil/Index.cshtml
+++ b/Src/RedeSocial.Web/Views/Perfil/Index.cshtml
@@ -5,11 +5,18 @@
 }
 <link rel="stylesheet" href="~/css/perfil.css" />
 
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+
 
 <div class="container">
     <div class="fb-profile">
         <img align="left" class="fb-image-lg" src="http://placeimg.com/850/280/tech" alt="Profile image example" />
-        <img align="left" class="fb-image-profile thumbnail" src="https://robohash.org/@(this.User.Claims.First(x => x.Type == System.Security.Claims.ClaimTypes.NameIdentifier).Value)?size=180x180&bgset=bg1" width="180" height="180" alt="Profile image example" />
+        <img align="left" class="fb-image-profile thumbnail" src="https://robohash.org/@(Model.ID)?size=180x180&bgset=bg1" width="180" height="180" alt="Profile image example" />
         <div class="fb-profile-text">
             <h1>@Model.Nome @Model.SobreNome</h1>
             <h6> @Model.UserName</h6>
@@ -45,26 +52,37 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="mr-2">
-                            <img class="rounded-circle" width="45" src="https://robohash.org/@(this.User.Claims.First(x => x.Type == System.Security.Claims.ClaimTypes.NameIdentifier).Value)?size=50x50&bgset=bg1" alt="">
+                            <img class="rounded-circle" width="45" src="https://robohash.org/@(item.ID_Account.ID)?size=50x50&bgset=bg1" alt="">
                         </div>
                         <div class="ml-2">
-                            <div class="h5 m-0"></div>
-                            <div class="h7 text-muted">@Model.Nome @Model.SobreNome</div>
+                            <div class="h5 m-0">@Model.Nome @Model.SobreNome</div>
+                            <div class="h7 text-muted">@(@Model.UserName)</div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="dropdown">
+                            <button class="btn btn-link dropdown-toggle" type="button" id="gedf-drop1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fa fa-ellipsis-h"></i>
+                            </button>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="gedf-drop1">
+                                <a class="dropdown-item" href="#">Editar</a>
+                                <a class="dropdown-item" href="#">Excluir</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="card-body">
-                <div class="text-muted h7 mb-2"> <i class="fa fa-clock-o"></i>@Html.DisplayFor(modelItem => item.DataPostagem)</div>
+                <div class="text-muted h7 mb-2"> <i class="fa fa-clock-o"></i>@item.DataPostagem</div>
 
                 <p class="card-text">
-                    @Html.DisplayFor(modelItem => item.Descricao)
+                    @item.Descricao
 
                     @if (!string.IsNullOrWhiteSpace(item.FotoPostUrl))
                     {
                         <div>
-                            <img width="200" height="200" src="@Html.DisplayFor(modelItem => item.FotoPostUrl)" alt="">
+                            <img width="200" height="200" src="@item.FotoPostUrl" alt="">
                         </div>
                     }
                 </p>
